Tried some assignments